Fix overflow from div boxes in parent container

--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
 * {
+  box-sizing: border-box;
   margin: 0px;
   padding: 0px;
-  box-sizing: border-box;
 }
 
 .square-container {
+  display: flex;
   margin-left: auto;
   margin-right: auto;
-  width: 600px;
-  height: 600px;
+  margin-top: 20px;
+  width: 500px;
+  height: 500px;
   border: 1px solid black;
+}
+
+.square-containertest {
+  width: 500px;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
 }
 
 .square {
-  width: 16px;
-  height: 16px;
-  border: 1px solid black;
-  background-color: blueviolet;
+  flex-grow: 1;
+  width: 80px;
+  height: 80px;
+  border: 1px solid white;
+  background-color: rgba(70, 151, 41, 0.78);
 }
